...
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tamaño_appbar"
            android:background="#ff7043"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/Theme.Macchiato"
            app:layout_constraintBottom_toTopOf="@+id/switch2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView15"
...
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto"
            android:text="Notificaciones"
            android:textColor="@color/black"
            android:textSize="@dimen/tamaño_letras_normales"
            app:layout_constraintBottom_toTopOf="@+id/recyclerAlarmas"
            app:layout_constraintEnd_toStartOf="@+id/switch2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch2"
...
