<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:id="@+id/dialogAnadirMateria">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/promedio_nota"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:gravity="start"
            android:text="@string/txt_nivel"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textSize="@dimen/texto_dialog"
            app:layout_constraintBottom_toTopOf="@+id/materia_vista"
            app:layout_constraintEnd_toStartOf="@+id/nivel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/nivel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            app:layout_constraintBottom_toTopOf="@+id/materia"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/promedio_nota"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/materia_vista"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:gravity="start"
            android:text="@string/txt_materia"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textSize="@dimen/texto_dialog"
            app:layout_constraintBottom_toTopOf="@+id/nota_vista"
            app:layout_constraintEnd_toStartOf="@+id/materia"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/promedio_nota" />

        <Spinner
            android:id="@+id/materia"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/materia_vista"
            app:layout_constraintTop_toBottomOf="@+id/nivel" />

        <TextView
            android:id="@+id/nota_vista"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:fontFamily="@font/roboto"
            android:gravity="start"
            android:text="@string/txt_nota"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textSize="@dimen/texto_dialog"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/editText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materia_vista" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"

            android:fontFamily="@font/roboto"
            android:inputType="numberDecimal"
            android:textSize="@dimen/texto_dialog"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/nota_vista"
            app:layout_constraintTop_toBottomOf="@+id/materia_vista" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>