...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:background="@drawable/logo_nuevo"
    tools:context=".Interfaz.Activities.LogInActivity"
    android:id="@+id/logInActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarLogInActivity"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tamaño_appbar"
...
            android:text="@string/textUsuario"
            android:textColor="@color/black"
            android:textSize="@dimen/tamaño_letras_normales"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:fontFamily="casual"
            android:inputType="textEmailAddress"
...
            android:text="@string/textContraseña"
            android:textColor="@color/black"
            android:textSize="@dimen/tamaño_letras_normales"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:inputType="textPassword"
...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/shape"
                android:fontFamily="@font/roboto"
                android:onClick="session"
                android:text="@string/textIniciar_sesion"
                android:textSize="@dimen/tamaño_letras_botones"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="0.5"
                android:background="@drawable/shape"
                android:fontFamily="@font/roboto"
...
