...
        android:layout_marginTop="48dp"
        android:orientation="vertical"
        android:padding="20dp"
        android:id="@+id/linearLayoutMostrarMaterias">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerMostrar"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</FrameLayout>
