...
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Interfaz.Fragments.PerfilFragment"
    android:id="@+id/perfilSinIniciarFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tamaño_appbar"
        android:background="#ff7043"
...
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/flecha_tamaño"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_flecha_hacia_abajo"
            app:layout_constraintBottom_toTopOf="@+id/buttonIniciarSesion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView18" />

        <Button
            android:id="@+id/buttonIniciarSesion"
...
